# HRMS

./: .gitignore
back-end-development/: alembic.ini  pyproject.toml
back-end-development/alembic/: env.py
back-end-development/alembic/versions/: 08e577a8c225_add_hr_decision_fields_to_candidates.py  0cb5504ffb9e_merge_interview_meeting_fields_with_hr_.py  12f84d85dd79_create_candidates_table.py  2450d7fe3be6_fix_hr_access_link_to_non_expiring.py  32aad2d9355a_add_user_interview_offer_tables.py  34c3ce73a798_add_id_column_to_interviews.py  353986be9d06_fix_interview_model.py  366b1a4a4214_add_candidate_linkedin_resume_and_.py  3806a6ce008d_add_audit_fields_to_hr_access_links.py  3bf9c2c26262_create_candidates_table.py  3db275fabe4e_create_candidates_table.py  43f28f9bcda5_create_hr_access_links.py  456e2b4adc7e_fix_hr_access_links_model.py  53320ae3e7ad_initial_schema.py  579381c1db68_add_candidate_linkedin_resume_and_.py  6117cd09bbed_add_status_column_to_candidates.py  6653f3e103f2_create_candidates_table.py  702acc41bc32_create_hr_access_links.py  7348607ea3c4_add_teams_meeting_and_recording_fields_.py  7c32880158f9_add_meeting_fields_to_interviews.py  7f80ffb7504e_add_the_job_and_the_interview.py  7fb2292e690b_add_is_used_to_hr_access_links.py  82ea05c4dbbb_add_teams_meeting_and_recording_fields_.py  85fd4dcd957a_add_resume_url_to_candidates.py  943eb2d62f83_add_teams_meeting_and_recording_fields_.py  959d27f2a1a5_add_candidate_linkedin_resume_and_.py  965a298f722b_merge_multiple_heads.py  9fbd8e62fe40_add_teams_meeting_and_recording_fields_.py  b513810c4327_baseline_schema.py  c3c351f5222c_add_hr_decision_fields_to_candidates.py  c74ac7cefbdf_create_notifications_table.py  cb24718fb581_add_candidate_status_column.py  d69260a2c42e_create_candidates_table.py  decc97e40e2b_add_candidate_linkedin_resume_and_.py  e5c41c78c0f6_add_candidate_linkedin_resume_and_.py  ea654e30937d_create_notifications_table.py  ef97826ca35c_add_user_interview_offer_tables.py
back-end-development/src/app/: main.py  router.py
back-end-development/src/app/api/: health.py  router.py
back-end-development/src/app/api/candidate_offer/: router.py  service.py
back-end-development/src/app/api/candidates/: crud.py  router.py  schemas.py
back-end-development/src/app/api/hr/: router.py  schemas.py  service.py
back-end-development/src/app/api/interviews/: router.py  schemas.py  service.py
back-end-development/src/app/api/jobs/: router.py  schemas.py
back-end-development/src/app/api/notifications/: router.py
back-end-development/src/app/api/offers/: router.py  schemas.py
back-end-development/src/app/api/positions/: schemas.py
back-end-development/src/app/core/: config.py  db.py  scheduler.py
back-end-development/src/app/models/: __init__.py  candidate.py  candidate_offer_link.py  hr_access_link.py  interview.py  job.py  notification.py  offer.py  positions.py  user.py
back-end-development/src/app/repositories/: candidate_offer_token_repo.py  hr_token_repo.py
back-end-development/src/app/services/: candidate_service.py  hr_report_service.py  hr_service.py  interview_service.py  job_service.py  notification_service.py  offer_service.py
back-end-development/src/app/utils/: azure_cloud_resume_storage.py  email.py  sharepoint_resume_storage.py  teams.py
front-end-development/: .env.example  README.md  next.config.js  package-lock.json  package.json
front-end-development/src/app/: layout.tsx  not-found.tsx  page.tsx
front-end-development/src/lib/: admin-dashboard.ts  api-client.ts  api.ts  candidates.ts  hr.api.ts  interviews.api.ts  job.api.ts  notifications.mock.ts  offers.api.ts
front-end-development/src/services/: candidates.service.ts
front-end-development/src/types/: common.ts  (+5 more)
(+53 files in other folders)
