[project]
name = "interview-to-onboarding"
version = "1.0.0"
description = "Automates the candidate journey from interview to onboarding"
authors = [
    { name = "Sai Naveen Adepu" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",

    # Database
    "sqlalchemy>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",

    # Migrations
    "alembic>=1.13.2,<2.0.0",

    # Config
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg2 (>=2.9.11,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
